--- a/ERP/Core.Erp.Web/Areas/CuentasPorCobrar/Views/Cobranza/_GridViewPartial_cobranza.cshtml
+++ b/ERP/Core.Erp.Web/Areas/CuentasPorCobrar/Views/Cobranza/_GridViewPartial_cobranza.cshtml
@@ -2,7 +2,7 @@
 @{
     var grid = Html.DevExpress().GridView(settings => {
         settings.Name = "GridView_cobranza";
-        settings.CallbackRouteValues = new { Controller = "Cobranza", Action = "GridViewPartial_cobranza" };
+        settings.CallbackRouteValues = new { Controller = "Cobranza", Action = "GridViewPartial_cobranza", Fecha_ini = ViewBag.Fecha_ini, Fecha_fin = ViewBag.Fecha_fin, IdSucursal = ViewBag.IdSucursal };
         settings.Width = Unit.Percentage(100);
         settings.KeyFieldName = "IdCobro";
 
