--- a/ERP/Core.Erp.Web/Areas/Inventario/Views/DistribucionPorLote/_GridViewPartial_distribucion_det.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Inventario/Views/DistribucionPorLote/_GridViewPartial_distribucion_det.cshtml
@@ -20,7 +20,7 @@
         settings.SettingsPager.Visible = true;
         settings.SettingsBehavior.AllowSelectByRowClick = false;
 
-        
+
 
         //Configuración click derecho
         settings.SettingsContextMenu.Enabled = true;
@@ -40,7 +40,10 @@
             column.Width = Unit.Percentage(50);
             column.EditorProperties().ComboBox(p =>
             {
-                p.Columns.Add("pr_descripcion", "Descripción").Width = Unit.Percentage(100);
+                p.Columns.Add("pr_descripcion", "Descripción").Width = Unit.Percentage(70);
+                p.Columns.Add("lote_num_lote", "Lote").Width = Unit.Percentage(15);
+                p.Columns.Add("lote_fecha_vcto", "Fecha exp.").Width = Unit.Percentage(15);
+
                 p.TextField = "pr_descripcion";
                 p.ValueField = "IdProducto";
                 p.ValueType = typeof(decimal);
