--- a/ERP/Core.Erp.Web/Areas/General/Views/ReportesPorUsuario/_GridViewPartial_reportes_por_usuario.cshtml
+++ b/ERP/Core.Erp.Web/Areas/General/Views/ReportesPorUsuario/_GridViewPartial_reportes_por_usuario.cshtml
@@ -1,25 +1,48 @@
+@using System.Web.UI.WebControls;
 @{
-	var grid = Html.DevExpress().GridView(settings => {
+    var grid = Html.DevExpress().GridView(settings =>
+    {
         settings.Name = "GridView_reportes_por_usuario";
-        settings.CallbackRouteValues = new { Controller = "ReportesPorUsuario", Action = "GridViewPartial_reportes_por_usuario" };
+        settings.CallbackRouteValues = new
+        {
+            Controller = "ReportesPorUsuario",
+            Action = "GridViewPartial_reportes_por_usuario",
+            IdEmpresa = ViewBag.IdEmpresa,
+            IdUsuario = ViewBag.IdUsuario
+        };
+        settings.Width = Unit.Percentage(100);
+        settings.KeyFieldName = "CodReporte";
 
+        settings.SettingsPager.Visible = true;
+        settings.Settings.ShowGroupPanel = false;
+        settings.Settings.ShowFilterRow = true;
+        settings.SettingsBehavior.AllowSelectByRowClick = false;
 
-		settings.KeyFieldName = "IdEmpresa";
+        //Configuración checkbox
+        settings.CommandColumn.Visible = true;
+        settings.CommandColumn.ShowSelectCheckbox = true;
+        settings.CommandColumn.SelectAllCheckboxMode = GridViewSelectAllCheckBoxMode.AllPages;
 
-		settings.SettingsPager.Visible = true;
-		settings.Settings.ShowGroupPanel = true;
-		settings.Settings.ShowFilterRow = true;
-		settings.SettingsBehavior.AllowSelectByRowClick = true;
+        //Configuración click derecho
+        settings.SettingsContextMenu.Enabled = true;
+        settings.SettingsBehavior.EnableCustomizationWindow = true;
+        settings.SettingsContextMenu.EnableRowMenu = DefaultBoolean.False;
 
-		settings.SettingsAdaptivity.AdaptivityMode = GridViewAdaptivityMode.Off;
-		settings.SettingsAdaptivity.AdaptiveColumnPosition = GridViewAdaptiveColumnPosition.Right;
-		settings.SettingsAdaptivity.AdaptiveDetailColumnCount = 1;
-		settings.SettingsAdaptivity.AllowOnlyOneAdaptiveDetailExpanded = false;
-		settings.SettingsAdaptivity.HideDataCellsAtWindowInnerWidth = 0;
+        settings.SettingsAdaptivity.AdaptivityMode = GridViewAdaptivityMode.HideDataCells;
+        settings.SettingsAdaptivity.AdaptiveColumnPosition = GridViewAdaptiveColumnPosition.Right;
+        settings.SettingsAdaptivity.AdaptiveDetailColumnCount = 1;
+        settings.SettingsAdaptivity.AllowOnlyOneAdaptiveDetailExpanded = false;
+        settings.SettingsAdaptivity.HideDataCellsAtWindowInnerWidth = 500;
 
-				settings.Columns.Add("IdUsuario");
-				settings.Columns.Add("IdEmpresa");
-				settings.Columns.Add("CodReporte");
-			});
+        settings.Columns.Add("CodReporte", "Código").Width = Unit.Percentage(10);
+        settings.Columns.Add("nom_reporte", "Nombre").Width = Unit.Percentage(85);
+        settings.Columns.Add(column =>
+        {
+            column.Caption = "*";
+            column.FieldName = "seleccionado";
+            column.ColumnType = MVCxGridViewColumnType.CheckBox;
+            column.Width = System.Web.UI.WebControls.Unit.Percentage(5);
+        });
+    });
 }
 @grid.Bind(Model).GetHtml()
