--- a/ERP/Core.Erp.Web/Areas/Reportes/Views/FacturacionReportes/_CmbCliente_Facturacion.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Reportes/Views/FacturacionReportes/_CmbCliente_Facturacion.cshtml
@@ -14,6 +14,7 @@
         settings.Properties.TextFormatString = "[{0}] {1}";
         settings.Properties.ValueField = "IdEntidad";
         settings.Properties.ValueType = typeof(decimal);
+        settings.Properties.ClientSideEvents.SelectedIndexChanged = "function(s,e,){cargar_cliente()}";
 
         settings.Properties.Columns.Add("IdEntidad", "ID", 10);
         settings.Properties.Columns.Add("pe_nombreCompleto", "Cliente", 90);
